--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -39,9 +39,9 @@ function GetDetail(currentMonth) {
                var event = [];
                for (var i = 0; i < data.Table.length; i++) {
                    var EWorking = data.Table[i].EWorking.replace('T00:00:00', 'T23:59:00');
-                   var TypeWorking = data.Table[i].TypeWorkingName.substr(0, 1);
+                   var TypeWorking = data.Table[i].TypeWorkingName.substr(0, 3);
                    event.push({
-                       title: data.Table[i].JobNo + '(' + TypeWorking+')',
+                       title: data.Table[i].JobNo + '(' + TypeWorking + ')' + '(' + data.Table[i].Technician + ')',
                        url: '/JobOrder/EditJobOrder?id=' + data.Table[i].ID,
                        start: data.Table[i].SWorking,
                        end: EWorking
