--- a/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
@@ -29,6 +29,7 @@
 
                     <input type="hidden" id="hidFromDate" />
                     <input type="hidden" id="hidToDate" />
+                    <input type="hidden" id="hidEmpGroup" />
                 </li>
                 <li><label class="marginright-22">DateFrom<span class="required">*</span></label>&nbsp;<label class="label-small">DateTo</label></li>
                 <li><input type="text" id="dtDateFrom" class="text-size120" placeholder="" required />&nbsp;
@@ -57,8 +58,8 @@
                             <th rowspan="3">Break2</th>
                             <th rowspan="3">Break3</th>
                             <th colspan="6">NUMBER OF HOURS</th>
-                            <th rowspan="3">Additionnal Wages (Baht)</th>
-                            <th rowspan="3">Deduction(-)(Baht)</th>
+                            <th rowspan="3" id="thAdditionnal">Additionnal Wages (Baht)</th>
+                            <th rowspan="3" id="thDeduction">Deduction(-)(Baht)</th>
                             <th rowspan="3">Remark</th>
                             <th rowspan="3">Location</th>
                             @*<th rowspan="3"></th>*@
@@ -79,7 +80,7 @@
                         </tr>
                     </thead>
                     <tfoot>
-                        <tr>
+                        <tr id="tr1">
                             <td colspan="8"></td>
                             <td></td>
                             <td></td>
@@ -90,12 +91,12 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td></td>
-                            <td></td>
+                            <td id="tr1"></td>
+                            <td id="tr1"></td>
                             <td>TOTAL</td>
                             <td>(WH3%)</td>
                         </tr>
-                        <tr>
+                        <tr id="tr2">
                             <td colspan="8">TOTAL (HRS)</td>
                             <td></td>
                             <td></td>
@@ -107,12 +108,12 @@
                             <td id="totalPremium"></td>
                             <td id="totalPremium2"></td>
                             <td id="totalSpecial"></td>
-                            <td>-</td>
-                            <td></td>
+                            <td class="td2">-</td>
+                            <td class="td2"></td>
                             <td></td>
                             <td></td>
                         </tr>
-                        <tr>
+                        <tr id="tr3">
                             <td colspan="8">RATE (BAHT)</td>
                             <td></td>
                             <td></td>
@@ -123,12 +124,12 @@
                             <td id="totalBathPremium"></td>
                             <td id="totalBathPremium2"></td>
                             <td id="totalBathSpecial"></td>
-                            <td></td>
-                            <td></td>
+                            <td id="tr3"></td>
+                            <td id="tr3"></td>
                             <td></td>
                             <td></td>
                         </tr>
-                        <tr>
+                        <tr id="tr4">
                             <td colspan="8">AMOUNTS (BAHT)</td>
                             <td></td>
                             <td></td>
@@ -139,12 +140,12 @@
                             <td id="totalAmountPremium"></td>
                             <td id="totalAmountPremium2"></td>
                             <td id="totalAmountSpecial">-</td>
-                            <td id="totalAdditional">-</td>
-                            <td id="totalDeduction">-</td>
+                            <td id="totalAdditional" class="td4">-</td>
+                            <td id="totalDeduction" class="td4">-</td>
                             <td id="totalAmount"></td>
                             <td id="totalVat"></td>
                         </tr>
-                        <tr>
+                        <tr id="tr5">
                             <td colspan="8">TOTAL WAGES(BAHT)</td>
                             <td></td>
                             <td></td>
@@ -155,8 +156,8 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td></td>
-                            <td></td>
+                            <td id="tr5"></td>
+                            <td id="tr5"></td>
                             <td></td>
                             <td id="totalWH"></td>
                         </tr>
@@ -167,7 +168,7 @@
             <ul class="form-style-1">
                 <li>
                     <button type="button" id="btnSave" class="btn btn-primary" onclick="ConfirmDialog('Update', 'WageTechnician', @Request.Params["id"])">Save</button>
-                    <a onclick="OpenRptWageTechnician(@Request.Params["id"])" class="alink" target="_blank"><img style="cursor:hand" src="@Url.Content("~/Images/printer.png")" class="btnprint" /></a>
+                    <a onclick="OpenRptWageTechnician(@Request.Params["id"])" class="alink"><img style="cursor:hand" src="@Url.Content("~/Images/printer.png")" class="btnprint" /></a>
                 </li>
             </ul>
         </form>
