--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -480,7 +480,7 @@
                                         <div >
                                             @* ManPower *@
                                             <div class="wrapper">
-                                                <div class="myDIV">
+                                                <div class="tbresponsive">
                                                     <table id="tabManpower" class="example">
                                                         <thead class="theader">
                                                             <tr>
