--- a/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
@@ -1048,7 +1048,7 @@
             <input type="hidden" id="hidIsReturn" class="hidIsReturn" />
 
             <div class="wrapper">
-                <div class="table-responsive">
+                <div class="tbresponsive">
                     <table id="tabRequisition" class="example">
                         <thead class="theader">
                             <tr>
