--- a/Alpha/AlphaMvc/Content/custom.css
+++ b/Alpha/AlphaMvc/Content/custom.css
@@ -20,7 +20,20 @@
  */
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
-
+.tdredColor
+{
+    background-color: rgba(240, 31, 31,0.4) !important;
+}
+.txttransparent
+{
+    background-color: transparent !important;
+    border: none;
+}
+.tbresponsive
+{
+    width: 1200px;
+    overflow-x: scroll;
+}
 .required
 {
     color:red;
